unpackaged/main/default/objects/vantiv_rootelement__c/vantiv_rootelement__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>vantiv rootelement</label>
</CustomObject>