unpackaged/main/default/objects/vantiv_rootelement__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <label>Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>