unpackaged/main/default/objects/vantiv_rootelement__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>