unpackaged/main/default/objects/vantiv_rootelement__c/fields/Root_Element__c.field-meta.xml
<CustomField>
    <fullName>Root_Element__c</fullName>
    <label>Root Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>